test/conformance/kuttl/reports/background/background-scan-block-resources/02-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestSuite
metadata:
  name: kyverno-background-policy-test
spec:
  tests:
    - name: background-policies-dont-block-resources
      steps:
        - name: verify-resource-is-not-blocked
          command:
            - kubectl
            - get
            - pod
            - my-pod
        assert:
          - command:
              - kubectl
              - get
              - pod
              - my-pod
            equals: "Running"
    - name: background-policies-dont-produce-reports
      steps:
          assert:
            - command:
                - kubectl
                - get
                - kyvernoauditreports
                - --selector=kyverno.io/policy-name=my-policy
              equals: ""
    - name: background-policies-dont-create-events
      steps:
          assert:
            - command:
                - kubectl
                - get
                - events
                - --selector=kyverno.io/policy-name=my-policy
              equals: ""
