test/conformance/kuttl/reports/background/background-scan-block-resources/03-test-2.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestSuite
metadata:
  name: kyverno-background-policy-test-2
spec:
  tests:
    - name: background-policies-dont-produce-reports
      steps:
        assert:
          - command:
              - kubectl
              - get
              - kyvernoauditreports
              - --selector=kyverno.io/policy-name=disallow-latest-tag
            equals: ""
