test/conformance/kuttl/reports/background/background-scan-block-resources/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-properties
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
